add new uploader/status route
