# src/api/router.js
@@ -4,6 +4,7 @@ import { uploadCallback } from './v1/callback/index.js'
 import { metadataRoute } from './v1/metadata/index.js'
 import { statusRoute } from './v1/status/index.js'
 import { uploaderInitiateRoute } from './v1/uploader/initiate/index.js'
+import { uploaderStatusRoute } from './v1/uploader/status/index.js'
 
 const router = {
   plugin: {
@@ -15,6 +16,7 @@ const router = {
       server.route(blobRoute)
       server.route(statusRoute)
       server.route(uploaderInitiateRoute)
+      server.route(uploaderStatusRoute)
     }
   }
 }
